sample-namespace-istio.yaml
#kubectl label namespace <namespace-name> istio-injection=enabled
apiVersion: v1
kind: Namespace
metadata:
  name: istio-temp
  labels:
    istio-injection: enabled
