sample-app-istion-injection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
      annotations:
        sidecar.istio.io/inject: "true"  # This annotation enables sidecar injection
    spec:
      containers:
        - name: my-container
          image: nginx
          ports:
            - containerPort: 80
